--- a/MAP Frequent Itemsets via Apriori Algorithm.ipynb
+++ b/MAP Frequent Itemsets via Apriori Algorithm.ipynb
@@ -513,7 +513,11 @@
    "outputs": [],
    "source": [
     "#I am interested in 3 or more similar cases out of the 804751 cases, so the threshold is 3/804751\n",
-    "custom_thres=3/len(df2000)"
+    "custom_thres=3/len(df2000)\n",
+    "\n",
+    "#Although this takes a very long time to run, I would recommend either increasing the threshold,\n",
+    "#or by reducing the dataframe size. You can do this by subselecting the state/region\n",
+    "#or by only looking at solved or solved cases"
    ]
   },
   {
