--- a/MAP Frequent Itemsets via Apriori Algorithm.ipynb
+++ b/MAP Frequent Itemsets via Apriori Algorithm.ipynb
@@ -554,7 +554,7 @@
     "\n",
     "Apriori is a popular algorithm for extracting frequent itemsets with applications in association rule learning. An itemset is considered as \"frequent\" if it meets a user-specified support threshold. For instance, if the support threshold is set to 0.5 (50%), a frequent itemset is defined as a set of items that occur together in at least 50% of all transactions in the database.\n",
     "\n",
-    "The apriori function expects data in a one-hot encoded pandas DataFrame. Suppose we have the following transaction data:"
+    "The apriori function expects data in a one-hot encoded pandas DataFrame."
    ]
   },
   {
